--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,12 +16,17 @@
     "@angular/compiler": "~13.0.0",
     "@angular/core": "~13.0.0",
     "@angular/forms": "~13.0.0",
+    "@angular/localize": "~13.0.0",
     "@angular/material": "^13.0.1",
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "autoprefixer": "^10.4.0",
     "bootstrap": "^5.1.3",
+    "lint": "^0.7.0",
+    "ng2-modal-module": "^1.0.1",
+    "ngb-modal": "^2.0.3",
     "postcss": "^8.3.11",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
